final ver.